# EROT

./: .gitignore  LICENSE.txt  README.md  demo.ipynb  df_2marginal.csv  df_3marginal.csv  df_4marginal.csv  df_4marginals.csv  mu.npy  multimarginal.py  perf_driver.py  pyproject.toml  test.py  test_sinkhorn.py  weak.npy
.github/workflows/: codeql.yml  runTest.yml
.ipynb_checkpoints/: QuadraticEOT_ExistingMethods-checkpoint.ipynb  cuda-checkpoint.py  plot-checkpoint.py
demo/: C.pt  X.pt  Y.pt  readme.md
deprecated/: QuadraticEOT.ipynb  cuda.py  sketch.py  torch_classical_eot.py  utils.py
env/: dependencies.py  erot_env.yml  lib.py
eot/: Untitled-1.txt  Untitled-2.txt  __init__.py  classical_eot.py  df_2marginals.csv  df_3marginals.csv  make_cost_tensor.py  make_marginal_tensor.py  multi-marginalOT.py  multimarginalOT2.py  quantum_eot.py  run_classical_eot.py  run_eot.py  run_quantum_eot.py  semi-deprectaed.py  sinkhorn_functions.py  testmemory.py  utils.py
eot/EROT.egg-info/: PKG-INFO  SOURCES.txt
tests/: readme.md  test_make_marginal.py  workflow.yml
tests/demo_eqiuv_dist/tensors/: demo_eqiuv_dist.pt
tests/demo_eqiuv_distribution/tensors/: demo_eqiuv_distribution.pt
tests/demo_result/tensors/: demo_result.pt
